syntax = "proto3";

option go_package = ".;pb";

package proto;

service ClientStream{
  rpc doRequest(stream ClientStreamRequest) returns(ClientStreamResponse){}
}

//请求
message ClientStreamRequest{
  string reqIdx = 1;
  string reqData = 2;
}

//响应
message ClientStreamResponse{
  string rspIdx = 1;
  string rspData = 2;
}

